[package]
name = "jwx"
version = "0.1.0"
edition = "2021"
authors = ["Matous Dzivjak <matousdzivjak@gmail.com>"]

keywords = [ "jwa", "jwe", "jwk", "jws", "jwt" ]
categories = [ "cryptography", "authentication" ]
license = "MIT"
homepage = "https://github.com/matoous/jwx"
repository = "https://github.com/matoous/jwx"
description = "Rust librariry implementing various JWx (JWA/JWE/JWK/JWS/JWT, otherwise known as JOSE) technologies."
readme = "README.md"

[dependencies]
base64 = "0.20.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"

[features]
reqwest = []
